# synphasor-emulator

./: .gitignore  Cargo.toml
html/: .rustc_info.json  index.html
src/: main.rs  psmodel.rs  simulator.rs
