[package]
name = "synphasor-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde-synphasor = {path = "../serde-synphasor"}
warp = "0.3.2"
serde_json = "1.0.79"
serde = "1.0.136"
serde_derive = "1.0.136"
